--- a/ChampionsOfForest.csproj
+++ b/ChampionsOfForest.csproj
@@ -211,9 +211,10 @@
     <Compile Include="ExpSources\FishEX.cs" />
     <Compile Include="Fun\Cheats.cs" />
     <Compile Include="Fun\SpaceX.cs" />
+    <Compile Include="Items\ItemDefinitions\Shields.cs" />
     <Compile Include="Items\ItemTemplates.cs" />
     <Compile Include="Items\MoreCraftingReceipes.cs" />
-    <Compile Include="Items\ItemDataBase_ItemDefinitions.cs" />
+    <Compile Include="Items\ItemDefinitions\ItemDataBase_ItemDefinitions.cs" />
     <Compile Include="Items\ItemDataBase_Loot.cs" />
     <Compile Include="Items\ItemDataBase_StatDefinitions.cs" />
     <Compile Include="Items\Sets\ItemSets.cs" />
