--- a/ChampionsOfForest.csproj
+++ b/ChampionsOfForest.csproj
@@ -210,19 +210,20 @@
     <Compile Include="ExpSources\FishEX.cs" />
     <Compile Include="Fun\Cheats.cs" />
     <Compile Include="Fun\SpaceX.cs" />
-    <Compile Include="Items\ItemDefinitions\Amulet.cs" />
-    <Compile Include="Items\ItemDefinitions\Boot.cs" />
-    <Compile Include="Items\ItemDefinitions\Bracer.cs" />
-    <Compile Include="Items\ItemDefinitions\ChestArmor.cs" />
-    <Compile Include="Items\ItemDefinitions\Glove.cs" />
+    <Compile Include="Items\ItemDefinitions\Amulets.cs" />
+    <Compile Include="Items\ItemDefinitions\Boots.cs" />
+    <Compile Include="Items\ItemDefinitions\Bracers.cs" />
+    <Compile Include="Items\ItemDefinitions\ChestArmors.cs" />
+    <Compile Include="Items\ItemDefinitions\Gloves.cs" />
     <Compile Include="Items\ItemDefinitions\Helmets.cs" />
+    <Compile Include="Items\ItemDefinitions\Materials.cs" />
     <Compile Include="Items\ItemDefinitions\Other.cs" />
     <Compile Include="Items\ItemDefinitions\Pants.cs" />
     <Compile Include="Items\ItemDefinitions\Quivers.cs" />
     <Compile Include="Items\ItemDefinitions\Rings.cs" />
     <Compile Include="Items\ItemDefinitions\Shields.cs" />
     <Compile Include="Items\ItemDefinitions\ShoulderArmor.cs" />
-    <Compile Include="Items\ItemDefinitions\SpellScroll.cs" />
+    <Compile Include="Items\ItemDefinitions\SpellScrolls.cs" />
     <Compile Include="Items\ItemTemplates.cs" />
     <Compile Include="Items\MoreCraftingReceipes.cs" />
     <Compile Include="Items\ItemDefinitions\ItemDataBase_ItemDefinitions.cs" />
